--- a/Ejercicio01/index.html
+++ b/Ejercicio01/index.html
@@ -11,22 +11,26 @@
 <body>
     <div class="container-fluid position-absolute top-50 start-50 translate-middle maincontainer">
         <div class="row text-center">
-                <h1 class="outsidetext">Login Form</h1>
+            <!-- Parte superior -->
+            <h1 class="outsidetext">Login Form</h1>
         </div>
         <div class="row text-center">
             <p class="outsidetext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum venenatis lectus a hendrerit consequat.</p>
         </div>
         <div class="container-fluid loginformcontainer">
             <div class="row">
+                <!-- Parte izquierda -->
                 <div class="col">
                     <h3>Login to our site</h3>
                     <p>Enter Username and Password</p>
                 </div>
+                <!-- Parte derecha -->
                 <div class="col text-end">
                     <img src="./img/lock-icon-29056.png" class="img-fluid lockimg">
                 </div>
             </div>
         </div> 
+        <!-- Inputs para nombre y contraseña -->
         <div class="container-fluid loginformcontainer2">  
             <div class="row">
                 <div class="input-group mb-3">
@@ -44,10 +48,12 @@
                 </div>
             </div>
         </div>
+        <!-- Boton -->
         <div class="row text-center socialtext">
             <p class="outsidetext">Login with</p>
         </div>
         <div class="container text-center">
+            <!-- Botones sociales -->
             <div class="row align-items-center">
                 <div class="col">
                     <button type="button" class="btn socialbutton">
