--- a/Ejercicio02/index.html
+++ b/Ejercicio02/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <div class="container-fluid position-absolute top-50 start-50 translate-middle maincontainer">
+        <!-- Titulo -->
         <div class="row text-center">
-                <h1 class="title">Contact us</h1>
+            <h1 class="title">Contact us</h1>
         </div>
+        <!-- Todos los inputs -->
         <div class="container-fluid contactusmcontainer">
             <div class="row">
                 <div class="col">
@@ -51,6 +53,7 @@
                     <img src="./img/report.png" class="img-fluid icons">
                 </div>
                 <div class="col-10">
+                    <!-- Textarea para que sea mas grande -->
                     <textarea type="text" class="form-control message text-start" placeholder="Enter your message for us here. We will get back to you within 2 business days" aria-label="Message" aria-describedby="basic-addon1"></textarea>
                 </div>
             </div>
